[package]
name = "genstubs"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Generate API response stubs for use in testing dandidav"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
fs-err = "3.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"

[lints]
workspace = true
