[package]
name = "testutils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Utilities used in testing dandidav"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
itertools = "0.14.0"
quick-xml = { version = "0.37.3", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
soupy = { version = "0.10.0", default-features = false, features = ["html-strict"] }
tendril = "0.4.3"
thiserror = "2.0.12"
wiremock = "0.6.3"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
